--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@
   Jekyll integration by somiibo.com
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 <html>
 	<head>
     {% include head.html %}
@@ -34,7 +35,7 @@
       				<h1>{{page.title}}</h1>
       				<p>{{page.excerpt}}</p>
       			</header>
-      			<div class="image main"><img src="{{page.image}}" alt=""></div>
+      			<!--<div class="image main"><img src="{{page.image}}" alt=""></div>-->
       			<p>{{content}}</p>
       		</section>
 
