--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -79,6 +79,12 @@
 					</div>
 
 				<!-- Footer -->
+				<footer>
+					<ul class="actions">
+						<li><a href="{{  "/blog/" | absolute_url }}" class="button">Projects</a></li>
+					  </ul>
+				</footer>
+
         {% include foot.html %}
 
 			</div>
