--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -37,6 +37,13 @@
       			</header>
       			<!--<div class="image main"><img src="{{page.image}}" alt=""></div>-->
       			<p>{{content}}</p>
+
+				<ul class="actions">
+				<li>
+					<a href="{{  "/" | absolute_url }}" class="button">See Other Projects</a>
+				</li>
+				</ul>
+				
       		</section>
 
 
