--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <ul class="links">
   <li class="{% if page.url == "/" %} active {% endif %}"><a href="{{ "/" | absolute_url }}">Projects</a></li>
-  <!--<li class="{% if page.url contains '/about/' %} active {% endif %}"><a href="{{ "/about/" | absolute_url }}">About</a></li>-->
+  <li class="{% if page.url contains '/about/' %} active {% endif %}"><a href="/images/Zhuoru_Zhang_resume.pdf">Resume</a></li>
   <!--<li class="{% if page.url contains '/blog/' %} active {% endif %}"><a href="{{ "/blog/" | absolute_url }}">Blog</a></li> -->
  <li class="{% if page.url contains '/AboutMe/' %} active {% endif %}"><a href="{{ "/AboutMe/" | absolute_url }}">About Me</a></li>
 </ul>
